Fix unreadable assassin word

--- a/codenames.css
+++ b/codenames.css
@@ -12,4 +12,5 @@
 
 .assassin {
     background: black;
+    color: white;
 }
